@@ -6,7 +6,7 @@
 # Lesser General Public License Version 3 or the Perl Artistic License Version 2.0.
 ######################################################################
 
-use Test;
+use Test::More;
 use strict;
 use Time::HiRes qw (gettimeofday usleep tv_interval sleep time);
 
@@ -16,18 +16,18 @@ BEGIN { require "t/test_utils.pl"; }
 BEGIN { $Parallel::Forker::Debug = 1; }
 
 use Parallel::Forker;
-ok(1);
+ok(1, "use");
 
 ######################################################################
 
 my $fork = new Parallel::Forker;
-ok(1);
-ok($fork->in_parent);
+ok(1, "new");
+ok($fork->in_parent, "in_parent");
 
 $SIG{CHLD} = sub { Parallel::Forker::sig_child($fork); };  # Not method, as is less stuff for a handler to do
 $SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork && $fork->in_parent; die "Quitting...\n"; };
 $fork->use_sig_child(1);
-ok(1);
+ok(1, "sig");
 
 {
     my $Didit;
@@ -37,9 +37,9 @@ ok(1);
 		     run_on_finish => sub { $Didit = 1; $finish_pid = $$; },
 		     ) ->run();
     $fork->wait_all();   # Wait for all children to finish
-    ok($Didit);
-    ok(not defined $start_pid); # runs in child
-    ok($finish_pid, $$); # runs in parent (us)
+    ok($Didit, "wait_all");
+    ok(!defined $start_pid, "start_pid"); # runs in child
+    is($finish_pid, $$, "finish_pid"); # runs in parent (us)
 }
 
 sub restarting_sleep {
@@ -103,19 +103,19 @@ sub restarting_sleep {
 
     # Nothing should have started running yet.
     my $running_count = $fork->running;
-    ok( $running_count, 0 );
+    is( $running_count, 0, "!running" );
 
     $fork->ready_all;
 
     # should have 3 runable and 3 waiting on dependencies (ready)
-    ok( scalar(grep { $_->is_ready } $fork->processes), 3 );
-    ok( scalar(grep { $_->is_runable } $fork->processes), 3 );
+    is( scalar(grep { $_->is_ready } $fork->processes), 3, "ready" );
+    is( scalar(grep { $_->is_runable } $fork->processes), 3, "runnable" );
 
     restarting_sleep(1);
 
     # Still nothing running...
     $running_count = $fork->running;
-    ok( $running_count, 0 );
+    is( $running_count, 0, "running" );
 
     $fork->poll;
     print "#  Should have fired off 3 by now...\n";
@@ -124,18 +124,18 @@ sub restarting_sleep {
 
     # First three should have spawned
     $running_count = scalar $fork->running;
-    ok( $running_count, 3 );
-    ok( scalar(@done), 0 );  # no done call-backs fired yet
+    is( $running_count, 3, "running_count");
+    is( scalar(@done), 0, "no done call-backs fired yet");
 
     $fork->poll;
 
-    ok( scalar(grep { $_->is_running } $fork->processes), 3 );
-    ok( scalar(grep { $_->is_runable } $fork->processes), 1 );
-    ok( scalar(@done), 2 ); # called both finished processes' callbacks
+    is( scalar(grep { $_->is_running } $fork->processes), 3 );
+    is( scalar(grep { $_->is_runable } $fork->processes), 1 );
+    is( scalar(@done), 2, "called both finished processes' callbacks");
 
     $fork->wait_all;
 
-    ok( scalar(@done), 6 ); # sanity check
+    is( scalar(@done), 6, "all done" ); # sanity check
 }
 
 run_a_test(run_it=>1);
@@ -161,7 +161,7 @@ sub run_a_test {
 			     },);
     $p1->run() if $params{run_it};
     $p1->ready() if $params{wait_it};
-    ok(1);
+    ok(1, "forked");
 
     my $p2 = $fork->schedule(
 			     label => 'after_p1_p2',
@@ -173,7 +173,7 @@ sub run_a_test {
     $p2->run() if $params{run_it};
     $p2->run_after($p1) if $params{wait_it};
     $p2->ready() if $params{wait_it};
-    ok(1);
+    ok(1, "ready");
 
     my $p3 = $fork->schedule(run_on_start => sub { usleep(100*1000); },
 			     run_on_finish => sub {
@@ -187,14 +187,14 @@ sub run_a_test {
 	$p3->run_after($p2->{name});
     }
     $p3->ready() if $params{wait_it};
-    ok(1);
+    ok(1, "ready");
 
     $fork->wait_all();   # Wait for all children to finish
-    ok(1);
+    ok(1, "wait_all");
 
-    ok($p1->{my_done_time});   # Check actually ran at some point
-    ok($p2->{my_done_time});
-    ok($p3->{my_done_time});
+    ok($p1->{my_done_time}, "p1 ran");   # Check actually ran at some point
+    ok($p2->{my_done_time}, "p2 ran");
+    ok($p3->{my_done_time}, "p3 ran");
     # Check we executed in parallel (p1&p2), or with appropriate ordering (p1 then p2)
     ok(tv_interval($p1->{my_done_time},$p2->{my_done_time}) < 0) if $params{run_it};
     ok(tv_interval($p1->{my_done_time},$p2->{my_done_time}) > 0) if $params{wait_it};
@@ -210,7 +210,7 @@ sub run_a_test {
 #   you have use_sig_child set to true and _activity is false.
 {
     # sanity-check precondition:
-    ok( $fork->use_sig_child );
+    ok( $fork->use_sig_child, "use_sig_child" );
 
     my $done;
     $fork->schedule(
@@ -223,7 +223,7 @@ sub run_a_test {
     $fork->poll;
 
     # should be 1 running process now
-    ok( scalar(grep { $_->is_running } $fork->processes), 1 );
+    is( scalar(grep { $_->is_running } $fork->processes), 1, "one running" );
 
     sleep 2;
     $fork->{_activity} = 0;
@@ -232,15 +232,15 @@ sub run_a_test {
     $fork->poll;
 
     # still have one "running" process
-    ok( scalar(grep { $_->is_running } $fork->processes), 1 );
-    ok( not $done );
+    is( scalar(grep { $_->is_running } $fork->processes), 1, "one running" );
+    ok( !$done, "!done" );
 
     # but if we have activity (like the sig_child() makes true), we do work:
     $fork->sig_child;
     $fork->poll;
 
-    ok( scalar(grep { $_->is_running } $fork->processes), 0 );
-    ok( $done, 1 );
+    is( scalar(grep { $_->is_running } $fork->processes), 0, "none running" );
+    is( $done, 1, "done" );
 }
 
 # Can reap "done" processes
@@ -275,42 +275,42 @@ sub run_a_test {
   );
 
   # nothing has happened... don't reap anything
-  ok( not $job1->is_reapable );
-  ok( not $job2->is_reapable );
-  ok( not $job3->is_reapable );
+  ok( ! $job1->is_reapable );
+  ok( ! $job2->is_reapable );
+  ok( ! $job3->is_reapable );
   my %reaped = map { $_->{name} => 1 } $fork->reap_processes;
-  ok( not $reaped{$name1} );
-  ok( not $reaped{$name2} );
-  ok( not $reaped{$name3} );
+  ok( ! $reaped{$name1} );
+  ok( ! $reaped{$name2} );
+  ok( ! $reaped{$name3} );
 
   # still hasn't run anything
   $fork->ready_all;
-  ok( not $job1->is_reapable );
-  ok( not $job2->is_reapable );
-  ok( not $job3->is_reapable );
+  ok( ! $job1->is_reapable );
+  ok( ! $job2->is_reapable );
+  ok( ! $job3->is_reapable );
   %reaped = map { $_->{name} => 1 } $fork->reap_processes;
-  ok( not $reaped{$name1} );
-  ok( not $reaped{$name2} );
-  ok( not $reaped{$name3} );
+  ok( ! $reaped{$name1} );
+  ok( ! $reaped{$name2} );
+  ok( ! $reaped{$name3} );
 
   $fork->poll;
   ok( $job1->is_running );
-  ok( not $job2->is_done );
-  ok( not $job3->is_done );
+  ok( ! $job2->is_done );
+  ok( ! $job3->is_done );
 
   # first job finishes, still can't reap because job2 is still running
   restarting_sleep(1.5);
   $fork->poll;
   ok( $job1->is_done );
   ok( $job2->is_running );
-  ok( not $job3->is_done );
-  ok( not $job1->is_reapable );
-  ok( not $job2->is_reapable );
-  ok( not $job3->is_reapable );
+  ok( ! $job3->is_done );
+  ok( ! $job1->is_reapable );
+  ok( ! $job2->is_reapable );
+  ok( ! $job3->is_reapable );
   %reaped = map { $_->{name} => 1 } $fork->reap_processes;
-  ok( not $reaped{$name1} );
-  ok( not $reaped{$name2} );
-  ok( not $reaped{$name3} );
+  ok( ! $reaped{$name1} );
+  ok( ! $reaped{$name2} );
+  ok( ! $reaped{$name3} );
 
   # job 2 finishes so no one is left referencing job1, reap it!
   restarting_sleep(1.5);
@@ -319,16 +319,16 @@ sub run_a_test {
   ok( $job2->is_done );
   ok( $job3->is_running );
   ok( $job1->is_reapable );
-  ok( not $job2->is_reapable );
-  ok( not $job3->is_reapable );
+  ok( ! $job2->is_reapable );
+  ok( ! $job3->is_reapable );
   %reaped = map { $_->{name} => 1 } $fork->reap_processes;
   ok( $reaped{$name1} );
   # labels got cleaned up also
-  ok( not $fork->find_proc_name('foo') );
+  ok( ! $fork->find_proc_name('foo') );
   ok( ! grep { $_->{name} eq $name1 } $fork->find_proc_name('bar') );
   ok( grep { $_->{name} eq $name2 } $fork->find_proc_name('bar') );
-  ok( not $reaped{$name2} );
-  ok( not $reaped{$name3} );
+  ok( ! $reaped{$name2} );
+  ok( ! $reaped{$name3} );
   ok( ! grep { $_->{name} eq $name1 } $fork->processes );
 
   restarting_sleep(1.5);
@@ -346,6 +346,6 @@ sub run_a_test {
   # job4 can't run because his run_after condition fails. be sure
   # to clean him up also
   ok( $reaped{$name4} );
-  ok( not $fork->find_proc_name('foo') );
-  ok( not $fork->find_proc_name('bar') );
+  ok( ! $fork->find_proc_name('foo'), "find_proc_name foo");
+  ok( ! $fork->find_proc_name('bar'), "find_proc_name bar");
 }
