@@ -6,7 +6,7 @@
 # Lesser General Public License Version 3 or the Perl Artistic License Version 2.0.
 ######################################################################
 
-use Test;
+use Test::More;
 use strict;
 
 use Time::HiRes qw (gettimeofday usleep tv_interval sleep time);
@@ -17,17 +17,17 @@ BEGIN { require "t/test_utils.pl"; }
 BEGIN { $Parallel::Forker::Debug = 1; }
 
 use Parallel::Forker;
-ok(1);
+ok(1, "use");
 
 ######################################################################
 
 my $fork = new Parallel::Forker (use_sig_child=>0);
-ok(1);
+ok(1, "new");
 
 # Not required in old versions, so make sure we still work
 #$SIG{CHLD} = sub { Parallel::Forker::sig_child($fork); };  # Not method, as is less stuff for a handler to do
 $SIG{TERM} = sub { $fork->kill_tree_all('TERM') if $fork && $fork->in_parent; die "Quitting...\n"; };
-ok(1);
+ok(1, "sig");
 
 my $p1 = $fork->schedule(label=>'p1',
 			 run_on_start => sub {
@@ -65,4 +65,4 @@ $fork->ready_all();
 $fork->wait_all();
 
 print "ALL DONE ==> $$\n";
-ok(1);
+ok(1, "done");
